# pre-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
rules/: mcp-specific.yml
src/pre_mcp/: __init__.py  cli.py  models.py  stage0.py  stage1.py  stage3.py  trust.py
